Managed to get DirectoryList to populate ChildContent. Adjusted Stop Page overflow.

--- a/MudBlazorPWA/Client/wwwroot/css/main-layout.css
+++ b/MudBlazorPWA/Client/wwwroot/css/main-layout.css
@@ -1,6 +1,7 @@
 .docview.main-content{
     display: flex;
     height: 100vh;
+    max-height: 100vh;
 }
 .docview.main-container{
    padding-inline: 0;
