--- a/MudBlazorPWA/Client/wwwroot/css/page-stops.css
+++ b/MudBlazorPWA/Client/wwwroot/css/page-stops.css
@@ -1,7 +1,11 @@
-﻿.stops-container{
+﻿
+.stops-container{
     display: grid;
     grid-template-columns: auto 1fr;
     grid-gap: 1rem;
+    padding: 1rem;
+    height: calc(101vh - var(--mud-appbar-height));
+
 }
 .stops-left-column
 {
@@ -10,17 +14,25 @@
     display: grid;
     grid-auto-rows: auto;
     grid-row-gap: 1rem;
-    padding: 1rem;
+    align-items: start;
+    overflow: auto;
+    height: min-content;
 
 }
 .stops-right-column
 {
     grid-column: 2;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
 
+    overflow: auto;
+
+
+
+}
+
+.left-column-paper{
+
+}
+
+.right-column-paper{
 
 }
